--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	</style>
   </head>
   <body>
+	  <h1>space to shoot</h1>
+	  <h2>w,a,s,d to move</h2>
   <canvas></canvas>
 	<script src="index.js"></script>
   </body>
