--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     </style>
   </head>
   <body>
+    <h1>wasd - move</h1>
+    <h2>Space - shoot</h2>
     <canvas></canvas>
 
     <!-- Mobile Controls -->
