--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <style>
       canvas {
         border: 1px solid black;
+        background-image: url('assets/background.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
       }
 
       /* Style for mobile controls */
